--- a/cours5/index.html
+++ b/cours5/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 21
+<pre><code>## [1] 22
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.4886621
+<pre><code>## [1] 0.3894628
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    5    3    2    2    2    3    2    5     1     4     1     5
-##  [2,]    5    0    2    7    3    3    8    5    2     4     2     6     2
-##  [3,]    3    2    0    5    1    1    6    3    2     2     2     4     2
-##  [4,]    2    7    5    0    4    4    1    4    7     3     6     1     7
-##  [5,]    2    3    1    4    0    1    5    2    3     1     3     3     3
-##  [6,]    2    3    1    4    1    0    5    2    3     1     2     3     3
-##  [7,]    3    8    6    1    5    5    0    5    8     4     7     2     8
-##  [8,]    2    5    3    4    2    2    5    0    5     1     4     3     5
-##  [9,]    5    2    2    7    3    3    8    5    0     4     2     6     2
-## [10,]    1    4    2    3    1    1    4    1    4     0     3     2     4
-## [11,]    4    2    2    6    3    2    7    4    2     3     0     5     1
-## [12,]    1    6    4    1    3    3    2    3    6     2     5     0     6
-## [13,]    5    2    2    7    3    3    8    5    2     4     1     6     0
-## [14,]    3    3    2    5    2    1    6    3    3     2     1     4     2
-## [15,]    4    1    1    6    2    2    7    4    1     3     1     5     1
+##  [1,]    0    2    3    5    2    3  Inf    1    2     5     4     2     5
+##  [2,]    2    0    1    3    2    1  Inf    2    2     3     2     1     3
+##  [3,]    3    1    0    2    3    1  Inf    2    1     2     2     2     3
+##  [4,]    5    3    2    0    5    3  Inf    4    3     2     3     4     4
+##  [5,]    2    2    3    5    0    3  Inf    1    2     5     4     1     5
+##  [6,]    3    1    1    3    3    0  Inf    2    1     2     1     2     2
+##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
+##  [8,]    1    2    2    4    1    2  Inf    0    1     4     3     1     4
+##  [9,]    2    2    1    3    2    1  Inf    1    0     3     2     2     3
+## [10,]    5    3    2    2    5    2  Inf    4    3     0     1     4     2
+## [11,]    4    2    2    3    4    1  Inf    3    2     1     0     3     1
+## [12,]    2    1    2    4    1    2  Inf    1    2     4     3     0     4
+## [13,]    5    3    3    4    5    2  Inf    4    3     2     1     4     0
+## [14,]    4    2    1    1    4    2  Inf    3    2     1     2     3     3
+## [15,]    1    1    2    4    2    2  Inf    2    3     4     3     1     4
 ##       [,14] [,15]
-##  [1,]     3     4
-##  [2,]     3     1
-##  [3,]     2     1
-##  [4,]     5     6
-##  [5,]     2     2
-##  [6,]     1     2
-##  [7,]     6     7
-##  [8,]     3     4
-##  [9,]     3     1
-## [10,]     2     3
-## [11,]     1     1
-## [12,]     4     5
-## [13,]     2     1
-## [14,]     0     2
-## [15,]     2     0
+##  [1,]     4     1
+##  [2,]     2     1
+##  [3,]     1     2
+##  [4,]     1     4
+##  [5,]     4     2
+##  [6,]     2     2
+##  [7,]   Inf   Inf
+##  [8,]     3     2
+##  [9,]     2     3
+## [10,]     1     4
+## [11,]     2     3
+## [12,]     3     1
+## [13,]     3     4
+## [14,]     0     3
+## [15,]     3     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.15356725 0.61570088 0.65799694 0.04070644 0.52595212 0.61143947
-##  [7] 0.03621037 0.13515556 0.30785044 0.43902995 0.56828439 0.05980724
-## [13] 0.48279704 0.36317851 1.00000000
+<pre><code>##  [1] 0.50518666 0.82921152 0.61996733 0.05914574 0.80337315 0.61996733
+##  [7] 0.00000000 1.00000000 0.61003919 0.11829148 0.21717063 0.94981598
+## [13] 0.05914574 0.21717063 0.85493836
 </code></pre>
 
   </article>
