--- a/cours4/index.html
+++ b/cours4/index.html
@@ -170,7 +170,7 @@
      <p>C&#39;est un système qui permet de suivre l&#39;ajout et les modifications pour un ensemble de fichier. <strong>C&#39;est le cahier de lab du programmeur.</strong></p>
 
 <ul>
-<li>Logiciel libre soutenu par une large communautée (12 millions d&#39;utilisateurs dans le monde)</li>
+<li>Logiciel libre soutenu par une large communauté (12 millions d&#39;utilisateurs dans le monde)</li>
 <li>Par défault, Git est installé sur les systèmes d&#39;exploitation Linux et Mac.</li>
 <li>Il peut être installé sur Windows: <a href="https://git-scm.com/download/win">https://git-scm.com/download/win</a></li>
 </ul>
@@ -252,7 +252,7 @@ ls -a # Lister tous le contenu du répertoire de travail.
 <li><code>git commit -m &quot;mon commentaire&quot;</code></li>
 </ol>
 
-<p>On répète ces étapes à plusieurs reprises au cours de l&#39;écriture d&#39;un document et/ou de l&#39;avancé d&#39;un projet.</p>
+<p>On répète ces étapes à plusieurs reprises au cours de l&#39;écriture d&#39;un document et/ou de l&#39;avancement d&#39;un projet.</p>
 
 <p><strong>Question</strong>: Qu&#39;est ce qu&#39;un bon commentaire?</p>
 
@@ -265,7 +265,7 @@ ls -a # Lister tous le contenu du répertoire de travail.
     <h1>Git status</h1>
   </hgroup>
   <article data-timings="">
-    <p>Votre meilleur ami, <code>git status</code>, permet de prendre connaissance de l&#39;état de notre dépôt Git.</p>
+    <p>Votre meilleur ami, <code>git status</code>, permet de prendre connaissance de l&#39;état de votre dépôt Git.</p>
 
 <pre><code class="bash">Sur la branche master
 
@@ -354,8 +354,8 @@ les suivre).
     <div class='right' style='float:right;width:48%'>
      <ul>
 <li>Une branche (<code>master</code> par défault): c&#39;est un série de commentaires (<code>commit</code>)</li>
-<li>Le dernier commentaire (<code>commit</code>) est ce que l&#39;on appelle la tête de la brance (<code>HEAD</code>), elle contient la version la plus à jour des fichiers.</li>
-<li>À chaque commentaire d&#39;édition (<code>commit</code>) est attaché une version des fichiers.</li>
+<li>Le dernier commentaire (<code>commit</code>) est ce que l&#39;on appelle la tête de la branche (<code>HEAD</code>), elle contient la version la plus à jour des fichiers.</li>
+<li>À chaque commentaire d&#39;édition (<code>commit</code>) est attachée une version des fichiers.</li>
 </ul>
 
     </div>
@@ -501,7 +501,7 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
     <h1>Les serveurs Git distants</h1>
   </hgroup>
   <article data-timings="">
-    <p>Il éxiste plusieurs d&#39;entreprise offrant des services gratuits pour héberger votre dépôt:</p>
+    <p>Il existe plusieurs entreprises offrant des services gratuits pour héberger votre dépôt:</p>
 
 <ul>
 <li><a href="https://about.gitlab.com/">Gitlab</a>: Serveur hébergeable dans votre infrastructure.</li>
