--- a/cours5/index.html
+++ b/cours5/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 28
+<pre><code>## [1] 24
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2512755
+<pre><code>## [1] 0.1996528
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    1    1    2    4    2    3    3    2     2     3     2     1
-##  [2,]    1    0    2    1    4    1    2    3    2     1     2     1     1
-##  [3,]    1    2    0    3    4    1    4    3    2     3     2     1     2
-##  [4,]    2    1    3    0    5    2    1    4    3     2     3     2     2
-##  [5,]    4    4    4    5    0    5    6    1    2     5     4     3     3
-##  [6,]    2    1    1    2    5    0    3    4    3     2     3     2     2
-##  [7,]    3    2    4    1    6    3    0    5    4     2     3     3     3
-##  [8,]    3    3    3    4    1    4    5    0    1     4     3     2     2
-##  [9,]    2    2    2    3    2    3    4    1    0     3     2     1     1
-## [10,]    2    1    3    2    5    2    2    4    3     0     1     2     2
-## [11,]    3    2    2    3    4    3    3    3    2     1     0     1     2
-## [12,]    2    1    1    2    3    2    3    2    1     2     1     0     1
-## [13,]    1    1    2    2    3    2    3    2    1     2     2     1     0
-## [14,]    1    1    2    2    4    1    3    3    2     2     2     1     2
-## [15,]    2    1    3    2    5    2    1    4    3     1     2     2     2
+##  [1,]    0    2    3    2    3    1    2    2  Inf   Inf     3     2     1
+##  [2,]    2    0    2    1    1    1    1    2  Inf   Inf     2     1     2
+##  [3,]    3    2    0    1    2    2    2    1  Inf   Inf     2     1     3
+##  [4,]    2    1    1    0    1    1    2    2  Inf   Inf     1     2     2
+##  [5,]    3    1    2    1    0    2    2    3  Inf   Inf     2     2     3
+##  [6,]    1    1    2    1    2    0    1    1  Inf   Inf     2     1     1
+##  [7,]    2    1    2    2    2    1    0    1  Inf   Inf     3     2     2
+##  [8,]    2    2    1    2    3    1    1    0  Inf   Inf     3     2     2
+##  [9,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0   Inf   Inf   Inf   Inf
+## [10,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf     0   Inf   Inf   Inf
+## [11,]    3    2    2    1    2    2    3    3  Inf   Inf     0     3     3
+## [12,]    2    1    1    2    2    1    2    2  Inf   Inf     3     0     2
+## [13,]    1    2    3    2    3    1    2    2  Inf   Inf     3     2     0
+## [14,]    3    2    2    1    2    2    1    2  Inf   Inf     2     1     3
+## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
 ##       [,14] [,15]
-##  [1,]     1     2
-##  [2,]     1     1
-##  [3,]     2     3
-##  [4,]     2     2
-##  [5,]     4     5
-##  [6,]     1     2
-##  [7,]     3     1
-##  [8,]     3     4
-##  [9,]     2     3
-## [10,]     2     1
-## [11,]     2     2
-## [12,]     1     2
-## [13,]     2     2
-## [14,]     0     2
-## [15,]     2     0
+##  [1,]     3   Inf
+##  [2,]     2   Inf
+##  [3,]     2   Inf
+##  [4,]     1   Inf
+##  [5,]     2   Inf
+##  [6,]     2   Inf
+##  [7,]     1   Inf
+##  [8,]     2   Inf
+##  [9,]   Inf   Inf
+## [10,]   Inf   Inf
+## [11,]     2   Inf
+## [12,]     1   Inf
+## [13,]     3   Inf
+## [14,]     0   Inf
+## [15,]   Inf     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.00000000 0.97110588 0.69382192 0.23529591 0.01492329 0.50117127
-##  [7] 0.13341842 0.07005279 0.31391798 0.33988968 0.23340588 0.75576246
-## [13] 0.64777622 0.68766663 0.39099585
+<pre><code>##  [1] 2.623864e-01 8.474905e-01 4.928032e-01 1.000000e+00 5.220160e-01
+##  [6] 9.286236e-01 6.059889e-01 4.466514e-01 4.320250e-17 4.320250e-17
+## [11] 2.203058e-01 7.902539e-01 2.623864e-01 5.279062e-01 4.320250e-17
 </code></pre>
 
   </article>
